[Ano] #4711 : Fixed top icons alignment.

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1760,7 +1760,7 @@ nav.horizontal{
 		margin-left: 5px;
 		margin-right: 5px;
 		box-sizing: border-box;
-	  	display: inline-block;
+	  	display: inline;
 	}
 	> a:hover{
 		border-bottom: 3px solid @accent;
@@ -4115,6 +4115,7 @@ em.skin-dyslexic{
 popover{
 	popover-content{
 		background: #fff;
+        top: 50px;
 		.material-card(1px, 20px);
 		.more{
 			background: #eee;
