--- a/assets/themes/leo/default/theme.css
+++ b/assets/themes/leo/default/theme.css
@@ -4331,6 +4331,7 @@ portal .page-markers {
 .page-markers .marker .content {
   position: absolute;
   transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
   bottom: -69px;
   left: -66px;
   width: 80px;
@@ -5724,15 +5725,21 @@ side-panel .opener {
   vertical-align: middle;
   border-radius: 25px;
   transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
   font-size: 24px;
   margin-top: -6px;
   -o-transition: transform 250ms ease;
   -moz-transition: transform 250ms ease;
   -webkit-transition: transform 250ms ease;
   transition: transform 250ms ease;
+  -o-transition: -webkit-transform 250ms ease;
+  -moz-transition: -webkit-transform 250ms ease;
+  -webkit-transition: -webkit-transform 250ms ease;
+  transition: -webkit-transform 250ms ease;
 }
 side-panel .opener:hover {
   transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
 }
 side-panel .opener::after {
   content: "\25B2";
@@ -5744,9 +5751,11 @@ side-panel.hidden .toggle {
 }
 side-panel.hidden .opener {
   transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
 }
 side-panel.hidden .opener:hover {
   transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
 }
 side-panel .toggle {
   position: absolute;
@@ -5788,6 +5797,10 @@ plus .opener > div {
   -moz-transition: transform 250ms ease;
   -webkit-transition: transform 250ms ease;
   transition: transform 250ms ease;
+  -o-transition: -webkit-transform 250ms ease;
+  -moz-transition: -webkit-transform 250ms ease;
+  -webkit-transition: -webkit-transform 250ms ease;
+  transition: -webkit-transform 250ms ease;
   height: 100%;
   width: 100%;
   top: 0;
@@ -5926,6 +5939,7 @@ nav.floating .arrow.previous::after {
   font-size: 26px;
   line-height: 38px;
   transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
 }
 nav.floating .arrow.previous.visible {
   display: block;
@@ -8365,7 +8379,7 @@ input:-webkit-autofill {
 }
 div.background-material {
   position: absolute;
-  background: linear-gradient(to bottom, #4bafd5 0%, #4bafd5 200px, #4bafd5 200px, white 200px, white 100%);
+  background: linear-gradient(to bottom, #4bafd5 0%, #4bafd5 200px, #4bafd5 200px, #ffffff 200px, #ffffff 100%);
 }
 .aligned {
   display: inline-block;
@@ -8564,7 +8578,7 @@ input-password button.pushed {
 }
 .panel button.flat-button,
 .panel input[type=submit].flat-button {
-  background: white;
+  background: #ffffff;
 }
 .panel.activation input[type="email"],
 .panel.activation input[type="tel"] {
@@ -8690,7 +8704,7 @@ nav.horizontal > a {
   margin-left: 5px;
   margin-right: 5px;
   box-sizing: border-box;
-  display: inline-block;
+  display: inline;
 }
 nav.horizontal > a:hover {
   border-bottom: 3px solid #ff8500;
@@ -11176,6 +11190,7 @@ em.skin-dyslexic {
 }
 popover popover-content {
   background: #fff;
+  top: 50px;
   box-shadow: 0 1px 20px rgba(0, 0, 0, 0.26);
   border-radius: 2px;
 }
